# n[pytype]
# inputs = action_angle_networks

[metadata]
name = action_angle_networks
version = 0.0.0
description = Action-Angle Networks
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include = action_angle_networks*
exclude =
    tests*
    notebooks*
    supercloud*
    webpage*
    job_scripts*
